# brtr

./: .gitignore  CMakeLists.txt  CMakeSources.cmake  README.md
include/brtr/: brtr.hpp  brtr_platform.hpp  buffer.hpp  bvh.hpp  camera.hpp  denoiser.hpp  gpgpu_platform.hpp  image_buffer.hpp  kernel.hpp  light.hpp  mesh.hpp  ray_tracer.hpp
src/: brtr_platform.cpp  camera.cpp
src/bvh/: bvh.cpp
src/denoiser/: denoiser.cpp
src/gpgpu/: gpgpu_platform.cpp  parameter.hpp
src/gpgpu/opencl/: buffer_opencl.hpp  bvh.cl  combine.cl  denoise-median.cl  denoise.cl  gpgpu_opencl.cpp  gpgpu_opencl.hpp  kernel_opencl.cpp  kernel_opencl.hpp  parameter_opencl.hpp  raytracing.cl
src/ray_tracer/: mesh.cpp  ray_tracer.cpp
test_app/: CMakeLists.txt  imgui_impl_opengl3.h  main.cpp  renderer.cpp  renderer.hpp
test_app/Assets/: many_squares.blend  many_squares.blend1  many_squares.mtl  single_monkey.blend  single_monkey.mtl  sphere.blend  sphere.blend1  sphere.mtl  square.blend  square.blend1  square.mtl  test_scene_monkeys.blend  test_scene_monkeys.blend1  test_scene_monkeys.mtl
